<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp"
            tools:text="Ingredients:" />

        <TextView
            android:id="@+id/textView_ingredients_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Ingredients" />


    </LinearLayout>
