<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="26dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_previous_step"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            tools:text="Previous"
            android:text="@string/previous"
            />

        <Button
            android:id="@+id/button_next_step"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            tools:text="Next"
            android:text="@string/next"/>

    </LinearLayout>
</android.support.v7.widget.CardView>

